--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Karla:wght@200&family=Nanum+Myeongjo:wght@700&family=Noto+Sans+KR:wght@100&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Karla:wght@200..800&family=Nanum+Myeongjo:wght@700&family=Noto+Sans+KR:wght@100&family=Alatsi&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
