--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hyun Jun's portfolio website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Karla:wght@200..800&family=Nanum+Myeongjo:wght@400;700&family=Noto+Sans+KR:wght@100..900&family=Alatsi&family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Karla:wght@200..800&family=Nanum+Myeongjo:wght@400;700&family=Noto+Sans+KR:wght@100..900&family=Alatsi&family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> -->
+    <title>Hyun Jun's portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
